package gr.teohaik.polymorphism;

/**
 *
 * @author chaikal
 */
public class PaintCircle 
        implements ShapePainter {

    @Override
    public void paintShape() {
        System.out.println("Circle Painted");
    }
    
    
    
}
