
package gr.teohaik.polymorphism;

/**
 *
 * @author chaikal
 */
public class PaintSquare implements ShapePainter {

    @Override
    public void paintShape() {
        System.out.println("Square painted");
    }
    
}
