
package gr.teohaik.polymorphism;

/**
 *
 * @author chaikal
 */
public class PaintTriangle implements ShapePainter {

    @Override
    public void paintShape() {
        System.out.println("Triangle painted");
    }
    
}
