/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package gr.teohaik.polymorphism;

/**
 *
 * @author chaikal
 */
public interface ShapePainter {
    
    void paintShape();
    
}
